# clserver

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: cli.rs  config.rs  lib.rs  logging.rs  main.rs  notifications.rs  paths.rs  rcon.rs
src/remote_backup/: kopia.rs  mod.rs  process.rs  restic.rs
src/server/: generic.rs  manager.rs  minecraft.rs  mod.rs
