[package]
name = "clserver"
version = "0.2.6"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml_edit = { version = "0.25.12", features = ["serde"] }
dirs = "6"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"

[lints.clippy]
all = "warn"
